--- a/cmd/doom/defs.yaml
+++ b/cmd/doom/defs.yaml
@@ -1,6 +1,7 @@
 weapons:
 - name: chainsaw
   egoSprite: "SAWG"
+  sound: "SAWFUL"
   damage: 15
   range: 40
   anim:
@@ -9,6 +10,7 @@ weapons:
 - name: pistol
   egoSprite: "PISG"
   fireSprite: "PISF"
+  sound: "PISTOL"
   damage: 10
   range: 10000
   fire_offset:
@@ -21,6 +23,7 @@ weapons:
 - name: "shotgun"
   egoSprite: "SHTG"
   fireSprite: "SHTF"
+  sound: "SHOTGN"
   damage: 20
   range: 10000
   fire_offset:
@@ -33,6 +36,7 @@ weapons:
 - name: "super-shotgun"
   egoSprite: "SHT2"
   fireSprite: "SHT2"
+  sound: "SHOTGN"
   damage: 30
   range: 10000
   fire_offset:
